<resources>
    <string name="app_name">NUMAD21Su-ShuweiWang</string>
    <string name="about_string">About</string>
    <string name="links">Link Collector</string>
    <string name="info_string">Name: Shuwei Wang\nEmail: wang.shuw@northeastern.edu
    </string>
    <string name="A_string">A</string>
    <string name="B_string">B</string>
    <string name="C_string">C</string>
    <string name="D_string">D</string>
    <string name="E_string">E</string>
    <string name="F_string">F</string>
    <string name="Press">Pressed: </string>
    <string name="item_name">Website Name</string>
    <string name="URL">URL starting with https://</string>
    <string name="tips">Tap URLs to websites. Tap items to edit.</string>
    <string name="location">Your location</string>
    <string name="locator">Get Current Location</string>
    <string name="getLocation">Locator</string>
    <string name="web">Web Service</string>
    <string name="loader">Submit</string>
    <string name="country">Search Countries and Its Capitals with a Word, e.g. United</string>

</resources>